Début de pretty print

--- a/ui/mainform.ui
+++ b/ui/mainform.ui
@@ -37,16 +37,6 @@
      <height>29</height>
     </rect>
    </property>
-   <widget class="QMenu" name="m_searchMenu" >
-    <property name="title" >
-     <string>&amp;Search</string>
-    </property>
-    <addaction name="m_searchAct" />
-    <addaction name="m_searchNextAct" />
-    <addaction name="m_searchPreviousAct" />
-    <addaction name="separator" />
-    <addaction name="m_replaceAct" />
-   </widget>
    <widget class="QMenu" name="m_fileMenu" >
     <property name="title" >
      <string>&amp;File</string>
@@ -63,32 +53,6 @@
     <addaction name="m_printAct" />
     <addaction name="separator" />
     <addaction name="m_exitAct" />
-   </widget>
-   <widget class="QMenu" name="m_editMenu" >
-    <property name="title" >
-     <string>&amp;Edit</string>
-    </property>
-    <addaction name="m_undoAct" />
-    <addaction name="m_redoAct" />
-    <addaction name="separator" />
-    <addaction name="m_cutAct" />
-    <addaction name="m_copyAct" />
-    <addaction name="m_pasteAct" />
-    <addaction name="separator" />
-    <addaction name="m_selectAllAct" />
-    <addaction name="m_duplicateLineAct" />
-    <addaction name="m_moveUpLineAct" />
-    <addaction name="m_moveDownLineAct" />
-    <addaction name="separator" />
-    <addaction name="m_upperTextAct" />
-    <addaction name="m_lowerTextAct" />
-    <addaction name="separator" />
-    <addaction name="m_indentAct" />
-    <addaction name="m_unindentAct" />
-    <addaction name="separator" />
-    <addaction name="m_commentLineAct" />
-    <addaction name="m_uncommentLineAct" />
-    <addaction name="m_completeAct" />
    </widget>
    <widget class="QMenu" name="m_projectMenu" >
     <property name="title" >
@@ -144,6 +108,43 @@
     </property>
     <addaction name="m_aboutAct" />
     <addaction name="m_aboutQtAct" />
+   </widget>
+   <widget class="QMenu" name="m_searchMenu" >
+    <property name="title" >
+     <string>&amp;Search</string>
+    </property>
+    <addaction name="m_searchAct" />
+    <addaction name="m_searchNextAct" />
+    <addaction name="m_searchPreviousAct" />
+    <addaction name="separator" />
+    <addaction name="m_replaceAct" />
+   </widget>
+   <widget class="QMenu" name="m_editMenu" >
+    <property name="title" >
+     <string>&amp;Edit</string>
+    </property>
+    <addaction name="m_undoAct" />
+    <addaction name="m_redoAct" />
+    <addaction name="separator" />
+    <addaction name="m_cutAct" />
+    <addaction name="m_copyAct" />
+    <addaction name="m_pasteAct" />
+    <addaction name="separator" />
+    <addaction name="m_selectAllAct" />
+    <addaction name="m_duplicateLineAct" />
+    <addaction name="m_moveUpLineAct" />
+    <addaction name="m_moveDownLineAct" />
+    <addaction name="separator" />
+    <addaction name="m_upperTextAct" />
+    <addaction name="m_lowerTextAct" />
+    <addaction name="separator" />
+    <addaction name="m_indentAct" />
+    <addaction name="m_unindentAct" />
+    <addaction name="separator" />
+    <addaction name="m_commentLineAct" />
+    <addaction name="m_uncommentLineAct" />
+    <addaction name="m_prettyPrintAct" />
+    <addaction name="m_completeAct" />
    </widget>
    <addaction name="m_fileMenu" />
    <addaction name="m_editMenu" />
@@ -704,6 +705,11 @@
    </property>
    <property name="text" >
     <string>&amp;Refresh</string>
+   </property>
+  </action>
+  <action name="m_prettyPrintAct" >
+   <property name="text" >
+    <string>Pretty print</string>
    </property>
   </action>
  </widget>
