--- a/ui/projectproperty.ui
+++ b/ui/projectproperty.ui
@@ -31,7 +31,50 @@
       <property name="spacing" >
        <number>6</number>
       </property>
-      <item row="4" column="1" >
+      <item row="2" column="0" >
+       <widget class="QLabel" name="label_7" >
+        <property name="text" >
+         <string>Project &amp;Type :</string>
+        </property>
+        <property name="buddy" >
+         <cstring>m_projectTypeCombo</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0" >
+       <widget class="QLabel" name="label_6" >
+        <property name="text" >
+         <string>Project &amp;Name :</string>
+        </property>
+        <property name="buddy" >
+         <cstring>m_nameLineEdit</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="2" >
+       <widget class="QLineEdit" name="m_projectLineEdit" />
+      </item>
+      <item row="4" column="0" >
+       <widget class="QLabel" name="label_9" >
+        <property name="text" >
+         <string>Project &amp;RCS :</string>
+        </property>
+        <property name="buddy" >
+         <cstring>m_projectRCSComboBox</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="2" >
+       <widget class="QLineEdit" name="m_nameLineEdit" />
+      </item>
+      <item row="1" column="3" >
+       <widget class="QToolButton" name="m_projectButton" >
+        <property name="text" >
+         <string>...</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="2" >
        <widget class="QComboBox" name="m_projectRCSComboBox" >
         <item>
          <property name="text" >
@@ -50,60 +93,10 @@
         </item>
        </widget>
       </item>
-      <item row="4" column="0" >
-       <widget class="QLabel" name="label_9" >
+      <item row="3" column="0" >
+       <widget class="QLabel" name="label_8" >
         <property name="text" >
-         <string>Project &amp;RCS :</string>
-        </property>
-        <property name="buddy" >
-         <cstring>m_projectRCSComboBox</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="1" >
-       <widget class="QComboBox" name="m_projectVersionCombo" >
-        <property name="currentIndex" >
-         <number>0</number>
-        </property>
-        <item>
-         <property name="text" >
-          <string>Egx 500 ES1</string>
-         </property>
-        </item>
-        <item>
-         <property name="text" >
-          <string>Egx 500 ES2</string>
-         </property>
-        </item>
-        <item>
-         <property name="text" >
-          <string>GCE 110</string>
-         </property>
-        </item>
-        <item>
-         <property name="text" >
-          <string>GCE 120</string>
-         </property>
-        </item>
-        <item>
-         <property name="text" >
-          <string>GCE 130</string>
-         </property>
-        </item>
-        <item>
-         <property name="text" >
-          <string>GCE 140</string>
-         </property>
-        </item>
-       </widget>
-      </item>
-      <item row="2" column="0" >
-       <widget class="QLabel" name="label_7" >
-        <property name="text" >
-         <string>Project &amp;Type :</string>
-        </property>
-        <property name="buddy" >
-         <cstring>m_projectTypeCombo</cstring>
+         <string>Project Version :</string>
         </property>
        </widget>
       </item>
@@ -117,30 +110,7 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="1" >
-       <widget class="QLineEdit" name="m_nameLineEdit" />
-      </item>
-      <item row="0" column="0" >
-       <widget class="QLabel" name="label_6" >
-        <property name="text" >
-         <string>Project &amp;Name :</string>
-        </property>
-        <property name="buddy" >
-         <cstring>m_nameLineEdit</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1" >
-       <widget class="QLineEdit" name="m_projectLineEdit" />
-      </item>
-      <item row="1" column="2" >
-       <widget class="QToolButton" name="m_projectButton" >
-        <property name="text" >
-         <string>...</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="1" >
+      <item row="2" column="2" >
        <widget class="QComboBox" name="m_projectTypeCombo" >
         <item>
          <property name="text" >
@@ -154,13 +124,10 @@
         </item>
        </widget>
       </item>
-      <item row="3" column="0" >
-       <widget class="QLabel" name="label_8" >
+      <item row="3" column="2" >
+       <widget class="QLabel" name="m_configurationVersionLabel" >
         <property name="text" >
-         <string>Project &amp;Version :</string>
-        </property>
-        <property name="buddy" >
-         <cstring>m_projectVersionCombo</cstring>
+         <string/>
         </property>
        </widget>
       </item>
@@ -424,7 +391,6 @@
   <tabstop>m_projectLineEdit</tabstop>
   <tabstop>m_projectButton</tabstop>
   <tabstop>m_projectTypeCombo</tabstop>
-  <tabstop>m_projectVersionCombo</tabstop>
   <tabstop>m_langComboBox</tabstop>
   <tabstop>m_navigatorComboBox</tabstop>
   <tabstop>m_webServiceList</tabstop>
