--- a/ui/rcslogform.ui
+++ b/ui/rcslogform.ui
@@ -1,6 +1,6 @@
 <ui version="4.0" >
- <class>RCSLogDialog</class>
- <widget class="QWidget" name="RCSLogDialog" >
+ <class>RCSLogWidget</class>
+ <widget class="QWidget" name="RCSLogWidget" >
   <property name="geometry" >
    <rect>
     <x>0</x>
@@ -9,128 +9,20 @@
     <height>401</height>
    </rect>
   </property>
-  <property name="windowTitle" >
-   <string>RCS Log</string>
-  </property>
-  <layout class="QVBoxLayout" >
+  <layout class="QGridLayout" >
+   <property name="margin" >
+    <number>0</number>
+   </property>
    <property name="spacing" >
-    <number>6</number>
+    <number>0</number>
    </property>
-   <property name="leftMargin" >
-    <number>9</number>
-   </property>
-   <property name="topMargin" >
-    <number>9</number>
-   </property>
-   <property name="rightMargin" >
-    <number>9</number>
-   </property>
-   <property name="bottomMargin" >
-    <number>9</number>
-   </property>
-   <item>
-    <widget class="QGroupBox" name="groupBox" >
-     <property name="title" >
-      <string>RCS Log</string>
-     </property>
-     <layout class="QGridLayout" >
-      <property name="leftMargin" >
-       <number>9</number>
-      </property>
-      <property name="topMargin" >
-       <number>9</number>
-      </property>
-      <property name="rightMargin" >
-       <number>9</number>
-      </property>
-      <property name="bottomMargin" >
-       <number>9</number>
-      </property>
-      <property name="horizontalSpacing" >
-       <number>6</number>
-      </property>
-      <property name="verticalSpacing" >
-       <number>6</number>
-      </property>
-      <item row="0" column="0" >
-       <widget class="QListWidget" name="m_rcsLogListWidget" />
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item>
-    <layout class="QHBoxLayout" >
-     <property name="spacing" >
-      <number>6</number>
-     </property>
-     <property name="leftMargin" >
-      <number>0</number>
-     </property>
-     <property name="topMargin" >
-      <number>0</number>
-     </property>
-     <property name="rightMargin" >
-      <number>0</number>
-     </property>
-     <property name="bottomMargin" >
-      <number>0</number>
-     </property>
-     <item>
-      <spacer>
-       <property name="orientation" >
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" >
-        <size>
-         <width>321</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QPushButton" name="m_abortButton" >
-       <property name="text" >
-        <string>&amp;Abort</string>
-       </property>
-       <property name="icon" >
-        <iconset resource="../application.qrc" >:/images/button_cancel.png</iconset>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="m_closeButton" >
-       <property name="text" >
-        <string>&amp;Close</string>
-       </property>
-       <property name="icon" >
-        <iconset resource="../application.qrc" >:/images/button_ok.png</iconset>
-       </property>
-      </widget>
-     </item>
-    </layout>
+   <item row="0" column="0" >
+    <widget class="QListWidget" name="m_rcsLogListWidget" />
    </item>
   </layout>
  </widget>
  <resources>
   <include location="../application.qrc" />
  </resources>
- <connections>
-  <connection>
-   <sender>m_closeButton</sender>
-   <signal>clicked()</signal>
-   <receiver>RCSLogDialog</receiver>
-   <slot>accept()</slot>
-   <hints>
-    <hint type="sourcelabel" >
-     <x>412</x>
-     <y>297</y>
-    </hint>
-    <hint type="destinationlabel" >
-     <x>185</x>
-     <y>296</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
