--- a/ui/projectproperty.ui
+++ b/ui/projectproperty.ui
@@ -22,7 +22,7 @@
    <item>
     <widget class="QTabWidget" name="tabWidget" >
      <property name="currentIndex" >
-      <number>3</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="tabProjectDefinition" >
       <attribute name="title" >
@@ -322,17 +322,27 @@
          <property name="title" >
           <string>WebServices</string>
          </property>
-         <layout class="QHBoxLayout" >
+         <layout class="QGridLayout" >
           <property name="margin" >
            <number>9</number>
           </property>
           <property name="spacing" >
            <number>6</number>
           </property>
-          <item>
-           <widget class="QListWidget" name="m_webServiceList" />
+          <item row="1" column="0" >
+           <widget class="QLabel" name="label_11" >
+            <property name="text" >
+             <string>&amp;Webservices WSDL</string>
+            </property>
+            <property name="buddy" >
+             <cstring>lineEdit</cstring>
+            </property>
+           </widget>
           </item>
-          <item>
+          <item row="1" column="1" >
+           <widget class="QLineEdit" name="lineEdit" />
+          </item>
+          <item rowspan="2" row="0" column="2" >
            <layout class="QVBoxLayout" >
             <property name="margin" >
              <number>0</number>
@@ -382,6 +392,9 @@
              </spacer>
             </item>
            </layout>
+          </item>
+          <item row="0" column="0" colspan="2" >
+           <widget class="QListWidget" name="m_webServiceList" />
           </item>
          </layout>
         </widget>
@@ -704,8 +717,8 @@
      <y>207</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>330</x>
-     <y>378</y>
+     <x>110</x>
+     <y>63</y>
     </hint>
    </hints>
   </connection>
@@ -716,12 +729,28 @@
    <slot>setText(QString)</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>199</x>
-     <y>150</y>
+     <x>110</x>
+     <y>63</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>204</x>
-     <y>263</y>
+     <x>110</x>
+     <y>63</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>m_webServiceList</sender>
+   <signal>currentTextChanged(QString)</signal>
+   <receiver>lineEdit</receiver>
+   <slot>setText(QString)</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>247</x>
+     <y>151</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>265</x>
+     <y>353</y>
     </hint>
    </hints>
   </connection>
