--- a/ui/projectproperty.ui
+++ b/ui/projectproperty.ui
@@ -335,12 +335,12 @@
              <string>&amp;Webservices WSDL</string>
             </property>
             <property name="buddy" >
-             <cstring>lineEdit</cstring>
+             <cstring>m_servicesLineEdit</cstring>
             </property>
            </widget>
           </item>
           <item row="1" column="1" >
-           <widget class="QLineEdit" name="lineEdit" />
+           <widget class="QLineEdit" name="m_servicesLineEdit" />
           </item>
           <item rowspan="2" row="0" column="2" >
            <layout class="QVBoxLayout" >
@@ -741,7 +741,7 @@
   <connection>
    <sender>m_webServiceList</sender>
    <signal>currentTextChanged(QString)</signal>
-   <receiver>lineEdit</receiver>
+   <receiver>m_servicesLineEdit</receiver>
    <slot>setText(QString)</slot>
    <hints>
     <hint type="sourcelabel" >
